   HADOOP-2274 Excess synchronization introduced by HADOOP-2139 negatively
               impacts performance
   HADOOP-2196 Fix how hbase sits in hadoop 'package' product
   HADOOP-2276 Address regression caused by HADOOP-2274, fix HADOOP-2173 (When
               the master times out a region servers lease, the region server
               may not restart)

  IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
                (Johan Oskarsson via Stack)
    HADOOP-2074 Simple switch to enable DEBUG level-logging in hbase
    HADOOP-2088 Make hbase runnable in $HADOOP_HOME/build(/contrib/hbase)
    HADOOP-2126 Use Bob Jenkins' hash for bloom filters
    HADOOP-2157 Make Scanners implement Iterable
    HADOOP-2176 Htable.deleteAll documentation is ambiguous
    HADOOP-2139 (phase 1) Increase parallelism in region servers.
    HADOOP-2267 [Hbase Shell] Change the prompt's title from 'hbase' to 'hql'.
                (Edward Yoon via Stack)
    HADOOP-2139 (phase 2) Make region server more event driven
    HADOOP-2289 Useless efforts of looking for the non-existant table in select
                command.
                (Edward Yoon via Stack)
    HADOOP-2257 Show a total of all requests and regions on the web ui
                (Paul Saab via Stack)
    HADOOP-2261 HTable.abort no longer throws exception if there is no active update.
    HADOOP-2287 Make hbase unit tests take less time to complete.
    HADOOP-2262 Retry n times instead of n**2 times.
    HADOOP-1608 Relational Algrebra Operators
                (Edward Yoon via Stack)

Release 0.15.1
Branch 0.15

  INCOMPATIBLE CHANGES
    HADOOP-1931 Hbase scripts take --ARG=ARG_VALUE when should be like hadoop
                and do ---ARG ARG_VALUE

  NEW FEATURES
    HADOOP-1768 FS command using Hadoop FsShell operations
                (Edward Yoon via Stack)
    HADOOP-1784 Delete: Fix scanners and gets so they work properly in presence