@@ -37,6 +37,8 @@ Trunk (unreleased changes)
    HADOOP-2276 Address regression caused by HADOOP-2274, fix HADOOP-2173 (When
                the master times out a region servers lease, the region server
                may not restart)
+   HADOOP-2253 getRow can return HBASE::DELETEVAL cells
+               (Bryan Duxbury via Stack)
 
   IMPROVEMENTS
     HADOOP-2401 Add convenience put method that takes writable
